--- a/src/dexih.functions/project.json
+++ b/src/dexih.functions/project.json
@@ -6,8 +6,8 @@
   "dependencies": {
     "Microsoft.Extensions.PlatformAbstractions": "1.0.0-rc2-final",
     "Newtonsoft.Json": "8.0.3",
-    "Microsoft.CodeAnalysis.Common": "1.3.0-beta1-20160429-01",
-    "Microsoft.CodeAnalysis.CSharp": "1.3.0-beta1-20160429-01"
+    "Microsoft.CodeAnalysis.Common": "2.0.0-beta1",
+    "Microsoft.CodeAnalysis.CSharp": "2.0.0-beta1"
   },
 
   "frameworks": {
