--- a/src/dexih.functions/project.json
+++ b/src/dexih.functions/project.json
@@ -1,46 +1,58 @@
 {
-  "version": "0.1.0",
-  "description": "Data Experts Group Functions",
-  "authors": [ "Gary" ],
+  "version": "0.1.4",
+  "title": "Data Experts Group - Functions Library",
+  "description": "This is a support library containing helpers and functions for the transforms packages.",
+  "authors": [ "Gary Holland" ],
+
+  "packOptions": {
+    "releaseNotes": "Note: This project is still under devlopement with regular breaking changes.",
+    "copyright": "Data Experts Group Ltd.",
+    "tags": [ "Business Intelligence", "BI", "ETL", "Data Integration", "Data Management", "DbDataReader", "Data Processing", "" ],
+    "projectUrl": "https://github.com/dataexperts/dexih.transforms"
+  },
 
   "dependencies": {
-    "Microsoft.Extensions.PlatformAbstractions": "1.0.0-rc2-final",
-    "Newtonsoft.Json": "8.0.3",
-    "Microsoft.CodeAnalysis.Common": "2.0.0-beta1",
-    "Microsoft.CodeAnalysis.CSharp": "2.0.0-beta1"
+    "Newtonsoft.Json": "8.0.3"
   },
 
   "frameworks": {
     "net451": {
       "frameworkAssemblies": {
         "System.Data": "4.0.0.0",
-        "System.Xml": "4.0.0.0",
-        "System.Runtime": "4.0.10.0",
-        "System.Text.Encoding": "4.0.0.0",
-        "System.Threading.Tasks": "4.0.0.0",
-        "System.IO": "4.0.0.0"
+        "System.Xml": "4.0.0.0"
       },
       "dependencies": {
+        "Microsoft.CodeAnalysis.Common": "1.2.2",
+        "Microsoft.CodeAnalysis.CSharp": "1.2.2",
+        "System.Threading.Tasks": "4.0.0"
       }
     },
-      "netstandard1.5": {
-        "dependencies": {
-          "NETStandard.Library": "1.5.0-rc2-24027",
-          "System.Data.Common": "4.0.1-rc2-24027",
-          "System.Text.RegularExpressions": "4.0.12-rc2-24027",
-          "System.Reflection.TypeExtensions": "4.1.0-rc2-24027",
-          "System.Net.Security": "4.0.0-rc2-24027",
-          "System.Xml.XPath.XDocument": "4.0.1-rc2-24027",
-          "System.Xml.XPath": "4.0.1-rc2-24027",
-          "System.Runtime.Loader": "4.0.0-rc2-24027",
-          "System.Collections.NonGeneric": "4.0.1-rc2-24027",
-          "System.Threading.Thread": "4.0.0-rc2-24027"
-        },
-        "imports": [
-          "portable-net45+wp80+win8+wpa81+dnxcore50",
-          "portable-net451+win8"
-        ]
-      }
+    "netstandard1.5": {
+      "dependencies": {
+        "NETStandard.Library": "1.5.0-rc2-24027",
+        "System.Data.Common": "4.0.1-rc2-24027",
+        "System.Text.RegularExpressions": "4.0.12-rc2-24027",
+        "System.Reflection.TypeExtensions": "4.1.0-rc2-24027",
+        "System.Net.Security": "4.0.0-rc2-24027",
+        "System.Xml.XPath.XDocument": "4.0.1-rc2-24027",
+        "System.Xml.XPath": "4.0.1-rc2-24027",
+        "System.Runtime.Loader": "4.0.0-rc2-24027",
+        "System.Collections.NonGeneric": "4.0.1-rc2-24027",
+        "System.Threading.Thread": "4.0.0-rc2-24027",
+        "Microsoft.CodeAnalysis.Common": "1.3.0-beta1-20160429-01",
+        "Microsoft.CodeAnalysis.CSharp": "1.3.0-beta1-20160429-01"
+      },
+      "imports": [
+        "portable-net45+wp80+win8+wpa81+dnxcore50",
+        "portable-net451+win8"
+      ]
     }
+  },
+  "scripts": {
+    "postcompile": [
+      "dotnet pack --no-build --configuration Debug -o ../../../packages"
+    ]
   }
+
+}
   
