--- a/src/dexih.transforms/project.json
+++ b/src/dexih.transforms/project.json
@@ -1,8 +1,18 @@
 {
-  "version": "0.1.0",
+  "version": "0.1.4",
+  "title": "Data Experts Group - Transforms Library",
+  "description": "This library enables advanced data transformation and analytics.  See the project url for more details.",
+  "authors": [ "Gary Holland" ],
+
+  "packOptions": {
+    "releaseNotes": "Note: This project is still under devlopement with regular breaking changes.",
+    "copyright": "Data Experts Group Ltd.",
+    "tags": [ "Business Intelligence", "BI", "ETL", "Data Integration", "Data Management", "DbDataReader", "Data Processing", "" ],
+    "projectUrl": "https://github.com/dataexperts/dexih.transforms",
+  },
 
   "dependencies": {
-    "dexih.functions": "0.1.0-*"
+    "dexih.functions": "0.1.*"
   },
   "frameworks": {
     "net451": { },
@@ -15,5 +25,11 @@
         "portable-net451+win8"
       ]
     }
+  },
+
+  "scripts": {
+    "postcompile": [
+      "dotnet pack --no-build --configuration Debug -o ../../../packages"
+    ]
   }
 }
