--- a/src/dexih.transforms/project.json
+++ b/src/dexih.transforms/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.1.4",
+  "version": "0.1.9",
   "title": "Data Experts Group - Transforms Library",
   "description": "This library enables advanced data transformation and analytics.  See the project url for more details.",
   "authors": [ "Gary Holland" ],
@@ -8,7 +8,7 @@
     "releaseNotes": "Note: This project is still under devlopement with regular breaking changes.",
     "copyright": "Data Experts Group Ltd.",
     "tags": [ "Business Intelligence", "BI", "ETL", "Data Integration", "Data Management", "DbDataReader", "Data Processing", "" ],
-    "projectUrl": "https://github.com/dataexperts/dexih.transforms",
+    "projectUrl": "https://github.com/dataexperts/dexih.transforms"
   },
 
   "dependencies": {
