--- a/src/dexih.transforms/project.json
+++ b/src/dexih.transforms/project.json
@@ -28,6 +28,9 @@
   },
 
   "scripts": {
+    "prebuild": [
+      "dotnet restore"
+    ],
     "postcompile": [
       "dotnet pack --no-build --configuration Debug -o ../../../packages"
     ]
