--- a/src/dexih.transforms/project.json
+++ b/src/dexih.transforms/project.json
@@ -25,14 +25,14 @@
         "portable-net451+win8"
       ]
     }
-  },
-
-  "scripts": {
-    "prebuild": [
-      "dotnet restore"
-    ],
-    "postcompile": [
-      "dotnet pack --no-build --configuration Debug -o ../../../packages"
-    ]
   }
+
+  //"scripts": {
+  //  "prebuild": [
+  //    "dotnet restore"
+  //  ],
+  //  "postcompile": [
+  //    "dotnet pack --no-build --configuration Debug -o ../../../packages"
+  //  ]
+  //}
 }
