--- a/src/dexih.functions/project.json
+++ b/src/dexih.functions/project.json
@@ -12,26 +12,22 @@
   },
 
   "dependencies": {
-    "Newtonsoft.Json": "9.0.1"
+    "Newtonsoft.Json": "9.0.1",
+    "Microsoft.CodeAnalysis.Common": "1.3.0",
+    "Microsoft.CodeAnalysis.CSharp": "1.3.0"
   },
 
   "frameworks": {
     "net451": {
       "frameworkAssemblies": {
         "System.Data": "4.0.0.0",
-        "System.Xml": "4.0.0.0"
-      },
-      "dependencies": {
-        "Microsoft.CodeAnalysis.Common": "1.3.0",
-        "Microsoft.CodeAnalysis.CSharp": "1.3.0",
-        "System.Threading.Tasks": "4.0.0"
+        "System.Xml": "4.0.0.0",
+        "System.Threading.Tasks": "4.0.0.0"
       }
     },
     "netstandard1.6": {
       "dependencies": {
         "NETStandard.Library": "1.6.0",
-        "Microsoft.CodeAnalysis.Common": "1.3.0",
-        "Microsoft.CodeAnalysis.CSharp": "1.3.0",
         "System.Data.Common": "4.1.0",
         "System.Text.RegularExpressions": "4.1.0",
         "System.Reflection.TypeExtensions": "4.1.0",
