--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ init:
  - ps: $Env:LABEL = "CI" + $Env:APPVEYOR_BUILD_NUMBER.PadLeft(5, "0")
 install:
 - ps: Start-FileDownload 'https://download.microsoft.com/download/A/3/8/A38489F3-9777-41DD-83F8-2CBDFAB2520C/packages/DotNetCore.1.0.0-SDK.Preview2-x64.exe'
-- dotnet-dev-win-x64.latest.exe /quiet
+- DotNetCore.1.0.0-SDK.Preview2-x64.exe /quiet
 environment:
   PATH: $(PATH);$(PROGRAMFILES)\dotnet\
 build_script:
