--- a/src/dexih.functions/project.json
+++ b/src/dexih.functions/project.json
@@ -12,9 +12,7 @@
   },
 
   "dependencies": {
-    "Newtonsoft.Json": "9.0.1",
-    "Microsoft.CodeAnalysis.Common": "1.3.0",
-    "Microsoft.CodeAnalysis.CSharp": "1.3.0"
+    "Newtonsoft.Json": "9.0.1"
   },
 
   "frameworks": {
