--- a/src/dexih.transforms/project.json
+++ b/src/dexih.transforms/project.json
@@ -26,13 +26,12 @@
       ]
     }
   }
-
-  "scripts": {
-    "prebuild": [
-      "dotnet restore"
-    ],
-    "postcompile": [
-      "dotnet pack --no-build --configuration Debug -o ../../../packages"
-    ]
-  }
+  //"scripts": {
+  //  "prebuild": [
+  //    "dotnet restore"
+  //  ],
+  //  "postcompile": [
+  //    "dotnet pack --no-build --configuration Debug -o ../../../packages"
+  //  ]
+  //}
 }
