--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,7 +20,7 @@ test_script:
 - dotnet test .\test\dexih.functions.tests
 - dotnet test .\test\dexih.transforms.tests
 - cd test\dexih.connections.test
-- dotnet test .\test\dexih.connections.test
+- dotnet test 
 - cd ..\..
 artifacts:
   - path: artifacts\*.nupkg
