--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,10 +1,10 @@
-version: '2.0.{build}'
+version: '0.2.{build}'
 configuration:
 - Debug
 - Release
 platform: Any CPU
 init:
- - ps: $Env:LABEL = "CI" + $Env:APPVEYOR_BUILD_NUMBER.PadLeft(5, "0")
+ - ps: $Env:LABEL = $Env:APPVEYOR_BUILD_NUMBER.PadLeft(5, "0")
 install:
 - ps: Start-FileDownload 'https://download.microsoft.com/download/A/3/8/A38489F3-9777-41DD-83F8-2CBDFAB2520C/packages/DotNetCore.1.0.0-SDK.Preview2-x64.exe'
 - DotNetCore.1.0.0-SDK.Preview2-x64.exe /quiet
