--- a/src/dexih.connections.flatfile/project.json
+++ b/src/dexih.connections.flatfile/project.json
@@ -7,8 +7,7 @@
   "packOptions": {
     "releaseNotes": "Note: This project is still under devlopement with regular breaking changes.",
     "copyright": "Data Experts Group Ltd.",
-    "tags": [ "Business Intelligence", "BI", "ETL", "Data Integration", "Data Management", "DbDataReader", "Data Processing", "" ],
-    "projectUrl": "https://github.com/dataexperts/dexih.transforms"
+    "tags": [ "Business Intelligence", "BI", "ETL", "Data Integration", "Data Management", "DbDataReader", "Data Processing", "Analytics", "FlatFile", "csv", "Excel" ],    "projectUrl": "https://github.com/dataexperts/dexih.transforms"
   },
 
   "frameworks": {
