--- a/src/dexih.connections.sql/project.json
+++ b/src/dexih.connections.sql/project.json
@@ -7,7 +7,7 @@
   "packOptions": {
     "releaseNotes": "Note: This project is still under devlopement with regular breaking changes.",
     "copyright": "Data Experts Group Ltd.",
-    "tags": [ "Business Intelligence", "BI", "ETL", "Data Integration", "Data Management", "DbDataReader", "Data Processing", "" ],
+    "tags": [ "Business Intelligence", "BI", "ETL", "Data Integration", "Data Management", "DbDataReader", "Data Processing", "Analytics", "sqlserver", "sqlite", "sql" ],    
     "projectUrl": "https://github.com/dataexperts/dexih.transforms"
   },
 
