--- a/src/dexih.connections.azure/project.json
+++ b/src/dexih.connections.azure/project.json
@@ -12,7 +12,8 @@
   },
 
   "frameworks": {
-    "netstandard1.6": {
+    "net46" : { },
+    "netstandard1.5": {
       "dependencies": {
         "NETStandard.Library": "1.6.0"
       },
