--- a/src/dexih.connections.webservice.restful/project.json
+++ b/src/dexih.connections.webservice.restful/project.json
@@ -12,6 +12,7 @@
   },
 
   "frameworks": {
+    "net46": {},
     "netstandard1.3": {
       "dependencies": {
         "NETStandard.Library": "1.6.0"
