updated binary datatype.  net 1.1 libraries.

--- a/samples/FunctionExamples/project.json
+++ b/samples/FunctionExamples/project.json
@@ -5,17 +5,19 @@
   },
 
   "dependencies": {
-    "dexih.functions": "0.2.*"
+    "dexih.functions": "0.2.*",
+    "Microsoft.NETCore.App": "1.1.0-preview1-001100-00"
   },
+
+  "runtimes": {
+    "win10-x64": {}
+  },
+
 
   "frameworks": {
     "netcoreapp1.0": {
       "imports": "dnxcore50",
       "dependencies": {
-        "Microsoft.NETCore.App": {
-          "type": "platform",
-          "version": "1.0.0"
-        }
       }
     }
   }
