--- a/src/dexih.connections.flatfile/project.json
+++ b/src/dexih.connections.flatfile/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "version": "0.2.2-*",
   "title": "Data Experts Group - FlatFile Connections",
   "description": "This is a support library which enables the transform library to access flat files.",
@@ -13,7 +13,6 @@
   "frameworks": {
     "netstandard1.3": {
       "dependencies": {
-        "NETStandard.Library": "1.6.0"
       },
       "imports": [
         "portable-net45+wp80+win8+wpa81+dnxcore50",
@@ -22,7 +21,8 @@
     }
   },
   "dependencies": {
-    "dexih.transforms": "0.2.*"
+    "dexih.transforms": "0.2.*",
+    "NETStandard.Library": "1.6.1-preview1-24530-04"
   }
   //"scripts": {
   //  "postcompile": [
