--- a/src/dexih.connections.sql/project.json
+++ b/src/dexih.connections.sql/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "version": "0.2.2-*",
   "title": "Data Experts Group - Connections - Sql Server & Sqlite",
   "description": "This is a support library which enables the transform library to access SqlServer and Sqlite databases.",
@@ -14,7 +14,6 @@
   "frameworks": {
     "netstandard1.3": {
       "dependencies": {
-        "NETStandard.Library": "1.6.0"
       },
       "imports": [
         "portable-net45+wp80+win8+wpa81+dnxcore50",
@@ -24,7 +23,8 @@
   },
   "dependencies": {
     "dexih.transforms": "0.2.*",
-    "Microsoft.Data.Sqlite": "1.0.0",
-    "System.Data.SqlClient": "4.1.0"
+    "Microsoft.Data.Sqlite": "1.1.0-preview1-final",
+    "NETStandard.Library": "1.6.1-preview1-24530-04",
+    "System.Data.SqlClient": "4.3.0-preview1-24530-04"
   }
 }
