--- a/samples/FunctionExamples/project.json
+++ b/samples/FunctionExamples/project.json
@@ -10,8 +10,11 @@
   },
 
   "runtimes": {
-    "win10-x64": {}
+    "win7-x64": {},
+    "ubuntu.14.04-x64": {},
+    "osx.10.10-x64": {}
   },
+
 
 
   "frameworks": {
