--- a/samples/FunctionExamples/project.json
+++ b/samples/FunctionExamples/project.json
@@ -6,7 +6,7 @@
 
   "dependencies": {
     "dexih.functions": "0.2.*",
-    "Microsoft.NETCore.App": "1.1.0-preview1-001100-00"
+    "Microsoft.NETCore.App": "1.1.0"
   },
 
   "runtimes": {
