--- a/src/dexih.connections.azure/project.json
+++ b/src/dexih.connections.azure/project.json
@@ -25,8 +25,8 @@
   "dependencies": {
     "dexih.transforms": "0.2.*",
     "dexih.connections.flatfile": "0.2.*",
-    "NETStandard.Library": "1.6.1-preview1-24530-04",
-    "WindowsAzure.Storage": "7.2.1"
+    "WindowsAzure.Storage": "7.2.1",
+    "NETStandard.Library": "1.6.1"
   }
   //"scripts": {
   //  "postcompile": [
