--- a/src/dexih.connections.sql/project.json
+++ b/src/dexih.connections.sql/project.json
@@ -23,8 +23,8 @@
   },
   "dependencies": {
     "dexih.transforms": "0.2.*",
-    "Microsoft.Data.Sqlite": "1.1.0-preview1-final",
-    "NETStandard.Library": "1.6.1-preview1-24530-04",
-    "System.Data.SqlClient": "4.3.0-preview1-24530-04"
+    "Microsoft.Data.Sqlite": "1.1.0",
+    "NETStandard.Library": "1.6.1",
+    "System.Data.SqlClient": "4.3.0"
   }
 }
