--- a/src/dexih.functions/project.json
+++ b/src/dexih.functions/project.json
@@ -12,16 +12,16 @@
   },
 
   "dependencies": {
-    "NETStandard.Library": "1.6.1-preview1-24530-04",
-    "Newtonsoft.Json": "9.0.2-beta1",
-    "System.Collections.NonGeneric": "4.3.0-preview1-24530-04",
-    "System.Data.Common": "4.3.0-preview1-24530-04",
-    "System.Net.Security": "4.3.0-preview1-24530-04",
-    "System.Reflection.TypeExtensions": "4.3.0-preview1-24530-04",
-    "System.Text.RegularExpressions": "4.3.0-preview1-24530-04",
-    "System.Threading.Thread": "4.3.0-preview1-24530-04",
-    "System.Xml.XPath": "4.3.0-preview1-24530-04",
-    "System.Xml.XPath.XDocument": "4.3.0-preview1-24530-04"
+    "Newtonsoft.Json": "9.0.1",
+    "NETStandard.Library": "1.6.1",
+    "System.Collections.NonGeneric": "4.3.0",
+    "System.Data.Common": "4.3.0",
+    "System.Net.Security": "4.3.0",
+    "System.Reflection.TypeExtensions": "4.3.0",
+    "System.Text.RegularExpressions": "4.3.0",
+    "System.Threading.Thread": "4.3.0",
+    "System.Xml.XPath": "4.3.0",
+    "System.Xml.XPath.XDocument": "4.3.0"
   },
 
   "frameworks": {
@@ -33,7 +33,7 @@
     //  }
     //},
     "netstandard1.3": {
-      "dependencies": {     },
+      "dependencies": {},
       "imports": [
         "portable-net45+wp80+win8+wpa81+dnxcore50",
         "portable-net451+win8"
