--- a/src/dexih.transforms/project.json
+++ b/src/dexih.transforms/project.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "dexih.functions": "0.2.*",
-    "NETStandard.Library": "1.6.1-preview1-24530-04"
+    "NETStandard.Library": "1.6.1"
   },
   "frameworks": {
     // "net451": { },
