--- a/src/dexih.connections.webservice.restful/project.json
+++ b/src/dexih.connections.webservice.restful/project.json
@@ -12,10 +12,6 @@
   },
 
   "frameworks": {
-    "net46": {
-      "dependencies": {
-      }
-    },
     "netstandard1.3": {
       "dependencies": {
       },
@@ -26,12 +22,6 @@
     }
   },
   "dependencies": {
-    "dexih.transforms": "0.2.*",
-    "NETStandard.Library": "1.6.1"
+    "dexih.transforms": "0.2.*"
   }
-  //"scripts": {
-  //  "postcompile": [
-  //    "dotnet pack --no-build --configuration Debug -o ../../../packages"
-  //  ]
-  //}
 }
