--- a/src/dexih.connections.flatfile/project.json
+++ b/src/dexih.connections.flatfile/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.2.2-*",
+  "version": "0.2.4-*",
   "title": "Data Experts Group - FlatFile Connections",
   "description": "This is a support library which enables the transform library to access flat files.",
   "authors": [ "Gary Holland" ],
@@ -13,6 +13,7 @@
   "frameworks": {
     "netstandard1.3": {
       "dependencies": {
+        "NETStandard.Library": "1.6.0"
       },
       "imports": [
         "portable-net45+wp80+win8+wpa81+dnxcore50",
@@ -21,6 +22,6 @@
     }
   },
   "dependencies": {
-    "dexih.transforms": "0.2.*"
+    "dexih.transforms": "0.2.4-*"
   }
 }
