--- a/src/dexih.connections.sql/project.json
+++ b/src/dexih.connections.sql/project.json
@@ -13,9 +13,7 @@
 
   "frameworks": {
     "netstandard1.3": {
-      "dependencies": {
-        "NETStandard.Library": "1.6.1"
-      },
+      "dependencies": {      },
       "imports": [
         "portable-net45+wp80+win8+wpa81+dnxcore50",
         "portable-net451+win8"
@@ -25,6 +23,7 @@
   "dependencies": {
     "dexih.transforms": "0.2.4-*",
     "Microsoft.Data.Sqlite": "1.1.0",
+    "NETStandard.Library": "1.6.1",
     "System.Data.SqlClient": "4.3.0"
   }
 }
