--- a/samples/FunctionExamples/FunctionExamples.csproj
+++ b/samples/FunctionExamples/FunctionExamples.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
     <AssemblyName>FunctionExamples</AssemblyName>
@@ -12,6 +12,9 @@
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\dexih.functions\dexih.functions.csproj" />
+    <ProjectReference Include="..\..\src\dexih.functions\dexih.functions.csproj">
+      <Project>{4D9DF68E-6365-4F1F-9A0D-92A37A1C8B8A}</Project>
+      <Name>dexih.functions</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
