--- a/src/dexih.connections.sql/dexih.connections.sql.csproj
+++ b/src/dexih.connections.sql/dexih.connections.sql.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Description>This is a support library which enables the transform library to access SqlServer and Sqlite databases.</Description>
     <AssemblyTitle>Data Experts Group - Connections - Sql Server &amp; Sqlite</AssemblyTitle>
@@ -16,7 +16,10 @@
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\dexih.transforms\dexih.transforms.csproj" />
+    <ProjectReference Include="..\dexih.transforms\dexih.transforms.csproj">
+      <Project>{DE06ED25-392B-4E85-849F-6E4FD96D5E0C}</Project>
+      <Name>dexih.transforms</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite" Version="1.1.0" />
