--- a/src/dexih.transforms/dexih.transforms.csproj
+++ b/src/dexih.transforms/dexih.transforms.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Description>This library enables advanced data transformation and analytics.  See the project url for more details.</Description>
     <AssemblyTitle>Data Experts Group - Transforms Library</AssemblyTitle>
@@ -19,6 +19,9 @@
     <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\dexih.functions\dexih.functions.csproj" />
+    <ProjectReference Include="..\dexih.functions\dexih.functions.csproj">
+      <Project>{4D9DF68E-6365-4F1F-9A0D-92A37A1C8B8A}</Project>
+      <Name>dexih.functions</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
