--- a/test/dexih.transforms.tests/dexih.transforms.tests.csproj
+++ b/test/dexih.transforms.tests/dexih.transforms.tests.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.3.0" />
     <PackageReference Include="System.Diagnostics.TraceSource" Version="4.3.0" />
     <PackageReference Include="System.Reflection.TypeExtensions" Version="4.3.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="1.1.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\dexih.functions\dexih.functions.csproj">
