--- a/src/dexih.connections.sql/dexih.connections.sql.csproj
+++ b/src/dexih.connections.sql/dexih.connections.sql.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Description>This is a support library which enables the transform library to access SqlServer and Sqlite databases.</Description>
     <AssemblyTitle>Data Experts Group - Connections - Sql Server &amp; Sqlite</AssemblyTitle>
