--- a/src/dexih.connections.azure/dexih.connections.azure.csproj
+++ b/src/dexih.connections.azure/dexih.connections.azure.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Description>This is a support library which enables the transform library to access Azure Storage Tables and Azure File Storage.</Description>
     <AssemblyTitle>Data Experts Group - Connections Azure</AssemblyTitle>
@@ -18,12 +18,8 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\dexih.transforms\dexih.transforms.csproj">
-      <Project>{DE06ED25-392B-4E85-849F-6E4FD96D5E0C}</Project>
-      <Name>dexih.transforms</Name>
     </ProjectReference>
     <ProjectReference Include="..\dexih.connections.flatfile\dexih.connections.flatfile.csproj">
-      <Project>{E9470918-7D49-4AD4-B015-60E4F1E02457}</Project>
-      <Name>dexih.connections.flatfile</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
