--- a/src/dexih.connections.azure/dexih.connections.azure.csproj
+++ b/src/dexih.connections.azure/dexih.connections.azure.csproj
@@ -21,6 +21,7 @@
     </ProjectReference>
     <ProjectReference Include="..\dexih.connections.flatfile\dexih.connections.flatfile.csproj">
     </ProjectReference>
+    <ProjectReference Include="..\dexih.functions\dexih.functions.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="WindowsAzure.Storage" Version="8.1.1" />
