--- a/src/dexih.connections.sql/dexih.connections.sql.csproj
+++ b/src/dexih.connections.sql/dexih.connections.sql.csproj
@@ -19,9 +19,11 @@
   <ItemGroup>
     <ProjectReference Include="..\dexih.transforms\dexih.transforms.csproj">
     </ProjectReference>
+    <ProjectReference Include="..\dexih.functions\dexih.functions.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite" Version="1.1.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.3.0" />
+    <PackageReference Include="Npgsql" Version="3.2.2" />
   </ItemGroup>
 </Project>
