--- a/samples/FunctionExamples/FunctionExamples.csproj
+++ b/samples/FunctionExamples/FunctionExamples.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
     <AssemblyName>FunctionExamples</AssemblyName>
@@ -13,8 +13,6 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\dexih.functions\dexih.functions.csproj">
-      <Project>{4D9DF68E-6365-4F1F-9A0D-92A37A1C8B8A}</Project>
-      <Name>dexih.functions</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
