--- a/test/dexih.connections.sql.tests/dexih.connections.sql.tests.csproj
+++ b/test/dexih.connections.sql.tests/dexih.connections.sql.tests.csproj
@@ -25,4 +25,9 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="1.1.1" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+  </Content>
+  </ItemGroup>
 </Project>
