--- a/test/dexih.connections.test/dexih.connections.test.csproj
+++ b/test/dexih.connections.test/dexih.connections.test.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
     <AssemblyName>dexih.connections.test</AssemblyName>
@@ -29,8 +29,14 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\dexih.transforms\dexih.transforms.csproj">
-      <Project>{DE06ED25-392B-4E85-849F-6E4FD96D5E0C}</Project>
-      <Name>dexih.transforms</Name>
     </ProjectReference>
   </ItemGroup>
+
+    <ItemGroup>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+  </Content>
+
+  </ItemGroup>
+
 </Project>
